# genai-eval-framework

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ENHANCED_VISION.md  GUIDE.md  README.md  STRATEGIC_MARKET_ANALYSIS.md  pyproject.toml  requirements.txt
.gemini/: GEMINI.md
case_studies/financial_signals/: README.md  sample_data.json
configs/: eval_config.yaml
docs/: ARCHITECTURE.md  DATA-CONTRACTS.md  DOMAIN.md  OPERATIONS.md  PRODUCT.md  QUALITY.md  SECURITY.md  TESTING.md
docs/DECISIONS/: 0001-uv-and-pyproject.md  README.md
genai_eval_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: eval_demo.py
src/: api.py  benchmark.py  contracts.py  decision_engine.py  persistence.py
src/evaluators/: __init__.py  factual.py  hallucination.py  quality.py  safety.py
src/reporters/: html_report.py  json_report.py
src/static/: style.css
src/templates/: index.html
tests/: test_api.py  test_evaluators.py
